# oceanheart.ai

./: .gitignore  .gitmodules  dating_app_value_graph.html  email_pdfs.py  update_git_submodules.py
agentic/: .gitignore
agentic/app/: .env.example  pyproject.toml  start.sh  (+1 more)
ai-sandbox/: .gitignore  pyproject.toml
ai-sandbox/docs/gemini-structured-extraction/: pyproject.toml
ai-sandbox/docs/sfa_examples/: book_scrape_v7.py
ai-sandbox/single-file-agents/: email_pdfs.py
ai-sandbox/single-file-agents/data/: high_scores.json
ai-sandbox/single-file-agents/thera-poc/director_pattern/: README.md
ai-sandbox/thera-poc/director_pattern/: .template.aider.conf.yml  director.py
ai-sandbox/thera-poc/director_pattern/ai_docs/: ai_docs.md
ai-sandbox/thera-poc/director_pattern/modules/: data_types.py
api/: package.json
director-pattern/: .env.sample  main.py
localdb/: .gitignore
oceanheart-donation-page/: package-lock.json
oceanheart-micro-ui/: package.json
oceanheart-single-pages/: ghost_blog_example.html
oceanheart-supabase/: config.toml
oceanheart-ui/: .gitignore  bun.lockb  config.ts  global.d.ts  next-sitemap.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.app.json
oceanheart-ui-portal/: docker-compose.yml  package.json
single-file-agents/: README.md  pyproject.toml
single-file-agents/thera-poc/director_pattern/: .gitignore  pyproject.toml
single-file-agents/thera-poc/director_pattern/tests/: data_types_test.py
subscription-portal/: package.json
utils/: tree.html  tree.py  tree.txt
(+135 files in other folders)
